test/sema/methods/mutating_method_on_temporary.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
struct S {
  fn foo(self: &Self) {}
}

fn main() {
  // CHECK: [[# @LINE + 1 ]]:4: error: expected mutable struct instance
  S{}.foo();
}
